add missing sections

--- a/bib/results.bib
+++ b/bib/results.bib
@@ -29,3 +29,82 @@
       primaryClass   = "hep-ph",
       SLACcitation   = "%%CITATION = ARXIV:1107.2120;%%",
 }
+
+@article{Aguilar-Saavedra:2014nja,
+      author         = "Aguilar-Saavedra, J.A.",
+      title          = "{Portrait of a colour octet}",
+      journal        = "JHEP",
+      volume         = "1408",
+      pages          = "172",
+      doi            = "10.1007/JHEP08(2014)172",
+      year           = "2014",
+      eprint         = "1405.5826",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2014-094",
+      SLACcitation   = "%%CITATION = ARXIV:1405.5826;%%",
+}
+
+@article{Chatrchyan:2012cxa,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Inclusive and differential measurements of the $t
+                        \bar{t}$ charge asymmetry in proton-proton collisions at 7
+                        TeV}",
+      collaboration  = "CMS Collaboration",
+      journal        = "Phys.Lett.",
+      volume         = "B717",
+      pages          = "129-150",
+      doi            = "10.1016/j.physletb.2012.09.028",
+      year           = "2012",
+      eprint         = "1207.0065",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-TOP-11-030, CERN-PH-EP-2012-175",
+      SLACcitation   = "%%CITATION = ARXIV:1207.0065;%%",
+}
+
+@article{Lyons:1988rp,
+      author         = "Lyons, Louis and Gibaut, Duncan and Clifford, Peter",
+      title          = "{How to Combine Correlated Estimates of a Single Physical
+                        Quantity}",
+      journal        = "Nucl.Instrum.Meth.",
+      volume         = "A270",
+      pages          = "110",
+      doi            = "10.1016/0168-9002(88)90018-6",
+      year           = "1988",
+      reportNumber   = "PRINT-88-0048 (OXFORD), OXFORD-NP-5-88",
+      SLACcitation   = "%%CITATION = NUIMA,A270,110;%%",
+}
+
+@article{Valassi:2003mu,
+      author         = "Valassi, A.",
+      title          = "{Combining correlated measurements of several different
+                        physical quantities}",
+      journal        = "Nucl.Instrum.Meth.",
+      volume         = "A500",
+      pages          = "391-405",
+      doi            = "10.1016/S0168-9002(03)00329-2",
+      year           = "2003",
+      SLACcitation   = "%%CITATION = NUIMA,A500,391;%%",
+}
+
+@techreport{ATLAS-CONF-2014-012,
+      title         = "{Combination of ATLAS and CMS $t\bar{t}$ charge asymmetry
+                       measurements using LHC proton-proton collisions at
+                       $\sqrt{s}=7$ TeV}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATLAS-CONF-2014-012",
+      month         = "Mar",
+      year          = "2014",
+}
+
+@techreport{CMS-PAS-TOP-12-033,
+      title         = "{Measurement of the ttbar charge asymmetry with
+                       lepton+jets events at 8 TeV}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-TOP-12-033",
+      year          = "2013",
+}
