--- a/tex/results_table8tev.tex
+++ b/tex/results_table8tev.tex
@@ -1,4 +1,5 @@
 \begin{table}[!htp]\centering
+\scalebox{0.9}{
 \begin{tabular}{l c c c c c c}
   \toprule
   &\multicolumn{6}{c}{$\mtt{}~[\rm{GeV}]$}    \\
@@ -8,7 +9,7 @@
   Theory & $0.0081^{+0.0003}_{-0.0004}$ & $0.0112\pm0.0005$ & $0.0114^{+0.0003}_{-0.0004}$ & $0.0134^{+0.0003}_{-0.0005}$ & $0.0167^{+0.0005}_{-0.0006}$ & $0.02100^{+0.00032}_{-0.00018}$ \\
   \bottomrule
 \end{tabular}
+}
 \caption{ }
-\label{tab:results_mtt}
+\label{tab:results_mtt_8tev}
 \end{table}
-
